--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -92,18 +92,13 @@ body {
 
 //
 //// UTILITIES
+/*
 
 // some useful style resets and initial form styling
-@import 'normalize.css/normalize';
-@import 'utility/reset/spacing';
-@import 'utility/reset/form';
 
 // system-wide styles, mixins and placeholders
 @import 'utility/mixins';
 @import 'utility/fonts';
-@import 'utility/grid/block-grid';
-@import 'utility/grid/columns';
-@import 'utility/grid/width-push-pull';
 
 
 // CORE
@@ -167,4 +162,4 @@ body {
 // miscellaneous project extras
 
 @import 'utility/print';
-
+*/
