--- a/app/styles/utility/_fonts.scss
+++ b/app/styles/utility/_fonts.scss
@@ -33,10 +33,10 @@ h3 {
 
   // for btn beside H3 Title
   > .btn {
-    @include rem(margin, 20px 0);
+    @include rem(margin-top, 20px);
 
     @include mq(sm){
-      @include rem(margin, -12px 0 20px 0);
+      @include rem(margin-top, -12px);
     }
 
   }
