--- a/app/styles/layout/_site-header.scss
+++ b/app/styles/layout/_site-header.scss
@@ -1,10 +1,14 @@
 /*
 Header
 */
-
+.no-hero {
+  .cd-main-header{
+    box-shadow: 0 20px 40px rgba(217,216,216,.35);
+  }
+}
 .cd-main-header {
   position: relative;
-  z-index: 4;
+  z-index: 100;
   height: 50px;
   background-color: $white;
   -webkit-font-smoothing: antialiased;
@@ -12,7 +16,7 @@ Header
   -webkit-transition: -webkit-transform 0.3s;
   -moz-transition: -moz-transform 0.3s;
   transition: transform 0.3s;
-  box-shadow: 0 20px 40px rgba(217,216,216,.35);
+
 }
 .cd-main-header.nav-is-visible {
   -webkit-transform: translateX(-260px);
