--- a/app/styles/module/_project-box.scss
+++ b/app/styles/module/_project-box.scss
@@ -3,11 +3,11 @@
 .project-box {
   background:$gray;
   @include rem(padding,10px 20px 20px);
-  height: 100%;
+  @include mq(md){
+  };
 }
 
 .project-box-side {
   background: none;
   border-bottom: 1px solid $gray;
-
 }
