--- a/app/styles/base/_mixins.scss
+++ b/app/styles/base/_mixins.scss
@@ -18,7 +18,6 @@
   -o-transition: $args;
   transition: $args;
 }
-//@include transition(color .3s ease);
 
 
 @mixin text-replace {
@@ -28,7 +27,11 @@
   white-space: nowrap;
 }
 
-
+.clearfix {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 @mixin mq($mq) {
    @if $mq == xs{
