--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -6,8 +6,10 @@ $yellow: #ffe100;
 $darkblue: #333545;
 $main-blue: #40508e;
 $gray: #ececec;
+$darkgray:#c7c7c7;
 $black: #000;
 $white:  #fff;
+$offblack:#333;
 
 
 /*
