--- a/app/styles/module/_hero.scss
+++ b/app/styles/module/_hero.scss
@@ -1,11 +1,15 @@
 /*
-Global OverWrite
+Global Heros Modules
+*/
+
+/*
+Home Page Hero
 */
 
 .hero {
   @include rem(padding, 100px 0);
   min-height: 360px;
-  background: #fff400 url(../images/homepage/hero-bg.jpg) no-repeat center bottom;
+  background: #fff400 url(../images/hero/hero-bg.jpg) no-repeat center bottom;
   p {
     @include rem(font-size, $h4-font-size);
   }
@@ -33,18 +37,81 @@ Global OverWrite
   }
 }
 
-/* Hero Slider Logos */
+/*
+Hero Slider Logos
+*/
+
 .hero-slider {
   background: #fff;
-
   ul {
     margin: 0;
     padding: 0;
     min-height: 120px;
     list-style: none;
   }
-
   li {
-
   }
+}
+
+/*
+Project Listing Hero
+*/
+
+.hero-project {
+  min-height:198px;
+  @include rem(padding-top, 20px);
+  background: $main-blue url(../images/hero/hero-project-listing.jpg) no-repeat center bottom;
+  @include mq(sm){
+    @include rem(padding-top, 30px);
+  }
+  h1 {
+    color: $white;
+    font-weight: 400;
+  }
+  p {
+    color: $white;
+    @include rem(font-size, $h4-font-size);
+  }
+}
+
+/*
+Company Listing Hero
+*/
+
+.hero-company {
+  min-height:198px;
+  @include rem(padding-top, 20px);
+  background: $yellow url(../images/hero/hero-company-listing.jpg) no-repeat center bottom;
+  @include mq(sm){
+    @include rem(padding-top, 40px);
+  }
+  h1 {
+    color: $main-blue;
+    font-weight: 400;
+  }
+  p {
+    color: $main-blue;
+    @include rem(font-size, $h4-font-size);
+  }
+}
+
+/*
+Company Details hero
+*/
+.hero-company-details {
+  position: relative;
+  height:183px;
+  width: 100%;
+  @include rem(padding-top, 20px);
+  background:  url(../images/media/company-banner-details.png) no-repeat right bottom;
+}
+
+.hero-shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background:  url(../images/hero/hero-shadow.png) no-repeat center bottom;
 }
