--- a/app/styles/utility/_fonts.scss
+++ b/app/styles/utility/_fonts.scss
@@ -11,14 +11,19 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   color: $main-blue;
-  @include rem(font-size, $h1-font-size);
+  @include rem(font-size, $h1-font-size - 10);
   font-weight: 600;
+
+  @include mq(sm){
+    @include rem(font-size, $h1-font-size);
+  }
 }
 
 h2 {
   color: $main-blue;
   @include rem(font-size, $h2-font-size);
   font-weight: 700;
+
 }
 
 h3 {
