--- a/app/styles/module/_tabs.scss
+++ b/app/styles/module/_tabs.scss
@@ -11,3 +11,14 @@ Tabs Global
   }
 
 }
+
+
+/* Tabs Case for Responsive */
+
+@include mqs(md) {
+.list-project{
+  .nav .btn{
+    @include rem(margin, 10px 0)
+  }
+}
+}
