--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,15 +38,19 @@
 
 @import 'module/breadcrumb';
 @import 'module/mainnav';
+@import 'module/dashboard-nav';
 @import 'module/hero';
 @import 'module/container';
 @import 'module/sidebar-details';
+@import 'module/sidebar-dashboard';
 @import 'module/box-block';
 @import 'module/company-box';
 @import 'module/project-box';
 @import 'module/details-box';
+@import 'module/dashboard-company-block';
 @import 'module/all-box';
 @import 'module/alert';
+@import 'module/dashboard-update';
 @import 'module/star-rating';
 @import 'module/vcard';
 @import 'module/review-social';
@@ -54,6 +58,9 @@
 @import 'module/tabs';
 @import 'module/form';
 @import 'module/search-details';
+@import 'module/quickbtn';
+@import 'module/message-block';
+@import 'module/bookmarks-block';
 @import 'module/inline-children';
 @import 'module/media';
 @import 'module/pagination';
@@ -69,6 +76,7 @@
 
 @import 'layout/outdated-browser';
 @import 'layout/site-header';
+@import 'layout/loggedin-site-header';
 @import 'layout/site-content';
 @import 'layout/sidebar';
 @import 'layout/site-footer';
@@ -80,7 +88,7 @@
 @import 'pages/home';
 @import 'pages/project-listing';
 @import 'pages/all-projects';
-
+@import 'pages/dashboard';
 
 // OVERRIDING UTILITIES
 // any aditional utilities that should have more important than other CSS
