--- a/app/styles/core/_button.scss
+++ b/app/styles/core/_button.scss
@@ -10,6 +10,7 @@ button:hover,
     box-shadow: none!important;
     cursor: pointer;
     text-decoration: none;
+    border: 0;
 }
 
 
@@ -17,10 +18,35 @@ button:hover,
   position: relative;
   border-radius: $br01;
   text-transform: uppercase;
-  text-decoration: none;
   @include rem(font-size, $base-font-size);
   @include rem(padding, 10px 30px);
   @include transition(all .4s ease);
+}
+
+.btn-dash {
+  position: relative;
+  border-radius: $br02;
+  @include rem(font-size, $base-font-size);
+  @include rem(padding, 10px 30px);
+  @include transition(all .4s ease);
+}
+
+.btn-blank {
+  border: 0;
+  @include rem(font-size, $base-font-size - 2);
+  text-align: left;
+  color: $darkblue;
+  font-weight: 500;
+  @include transition(all .4s ease);
+}
+
+.btn-link {
+  background: none;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  text-decoration: underline;
+  color: $main-blue;
 }
 
 .btn-sm {
@@ -69,4 +95,10 @@ button:hover,
     color: $white;
   }
 
+}
+
+.btn-list {
+  .btn-sm {
+    @include rem(padding, 4px 30px);
+  }
 }
