--- a/app/styles/utility/_modal.scss
+++ b/app/styles/utility/_modal.scss
@@ -71,3 +71,45 @@ Modal
     padding-top: 0;
   }
 }
+
+
+/* Sign up Model */
+.modal-singup {
+  @extend .modal-fullscreen;
+
+  .modal-content {
+    background: $offgray;
+  }
+  .modal-body {
+    background: $gray;
+  }
+
+  .modal-header {
+    border: 0;
+
+    h3 {
+      text-transform: capitalize;
+      color: $main-blue;
+    }
+  }
+}
+
+
+.line-border {
+  border-top: 2px solid $darkblue;
+  @include rem(padding, 0 40px);
+
+  span {
+    background: $offgray;
+    color: $darkblue;
+    @include rem(padding, 5px 10px);
+    margin-top: -17px;
+    display: block;
+  }
+}
+
+.form-signup  {
+  h5 {
+  
+  }
+}
