update build process and add better min flags

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,7 +31,7 @@
 @import 'core/label';
 @import 'core/list';
 @import 'core/table';
-
+@import 'core/flag';
 
 // MODULE
 // simple combinations of cores and reusable components not tied to a specific section
