add signup page & search Page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -85,6 +85,7 @@
 // layouts stitched together to form pages
 
 @import 'pages/home';
+@import 'pages/signin';
 @import 'pages/project-listing';
 @import 'pages/all-projects';
 @import 'pages/dashboard';
