--- a/app/styles/utility/_modal.scss
+++ b/app/styles/utility/_modal.scss
@@ -74,7 +74,7 @@ Modal
 
 
 /* Sign up Model */
-.modal-singup {
+.modal-signup {
   @extend .modal-fullscreen;
 
   .modal-content {
@@ -110,6 +110,6 @@ Modal
 
 .form-signup  {
   h5 {
-  
+
   }
 }
