--- a/app/styles/pages/_signin.scss
+++ b/app/styles/pages/_signin.scss
@@ -2,8 +2,8 @@
 .sign-section {
   @include rem(padding, 80px 0);
 }
-.singup {
-   main {
+main {
+    &.signup{
      background: $main-blue;
    }
 }
