--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,6 +89,7 @@
 @import 'pages/project-listing';
 @import 'pages/all-projects';
 @import 'pages/dashboard';
+@import 'pages/about';
 
 // OVERRIDING UTILITIES
 // any aditional utilities that should have more important than other CSS
