--- a/app/styles/module/_mainnav.scss
+++ b/app/styles/module/_mainnav.scss
@@ -271,7 +271,7 @@ Search Form
     left: 0;
     height: 100%;
     width: 100%;
-    background: $gray;
+    background: $white;
     opacity: 0;
     visibility: hidden;
     -webkit-transition: opacity 0.3s, visibility 0.3s;
