--- a/app/styles/core/_button.scss
+++ b/app/styles/core/_button.scss
@@ -132,3 +132,15 @@ button:hover,
     color: $white;
   }
 }
+
+.btn-play {
+  font-family: $fontnu;
+  font-weight: 900;
+  font-size: $h1-font-size - 6;
+  text-transform: capitalize;
+
+  i {
+    font-weight: normal;
+  }
+
+}
