--- a/app/styles/layout/_loggedin-site-header.scss
+++ b/app/styles/layout/_loggedin-site-header.scss
@@ -8,6 +8,11 @@ Logged In Header
     img {
       border-radius: 50%;
       border: 1px solid $yellow;
+      @include rem(margin-bottom, 7px);
+
+      @include mq(md) {
+        margin-bottom: 0;
+      }
     }
   }
 }
