--- a/app/styles/module/_hero.scss
+++ b/app/styles/module/_hero.scss
@@ -10,6 +10,7 @@ Home Page Hero
   @include rem(padding, 100px 0);
   min-height: 360px;
   background: #fff400 url(../images/hero/hero-bg.jpg) no-repeat center bottom;
+  background-size: contain;
 
   &.about-hero {
     min-height: 240px;
