submit-review add tabs on select

--- a/app/styles/module/_form.scss
+++ b/app/styles/module/_form.scss
@@ -161,3 +161,9 @@ Custom File Name
 .custom-file-control.selected:lang(en):after {
   content: "" !important;
 }
+
+
+/* case to fix write-review */
+.casepushup {
+  margin-top: -90px;
+}
