--- a/app/styles/module/_mainnav.scss
+++ b/app/styles/module/_mainnav.scss
@@ -154,7 +154,7 @@
   width: 260px;
   height: 100vh;
   overflow: auto;
-color: $white;
+  color: $white;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -914,6 +914,32 @@ JavaScript Disabled
     left: 5px!important;
       @media (max-width: 1024px) {
         left: 0!important;
+      }
+    }
+  }
+}
+
+
+/* new Menu elements */
+.cd-main-nav {
+  .no-effect {
+    a {
+      &:hover{
+        opacity: 1;
+      }
+    }
+  }
+
+  .btn-menu {
+    a {
+      border: 1px solid $gray;
+      border-radius: 4px;
+      @include transition(all .4s ease);
+
+      &:hover{
+        opacity: 1;
+        background: $main-blue;
+        color: $white;
       }
     }
   }
