add yes/no cases for forms

--- a/app/styles/module/_form.scss
+++ b/app/styles/module/_form.scss
@@ -170,3 +170,9 @@ Custom File Name
     margin-top: 0;
   }
 }
+
+/* case to show on yes / no */
+.yes-case-info,
+.no-case-info {
+  display: none;
+}
