add new pages for claim

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -90,6 +90,7 @@
 @import 'pages/all-projects';
 @import 'pages/dashboard';
 @import 'pages/about';
+@import 'pages/claim';
 
 // OVERRIDING UTILITIES
 // any aditional utilities that should have more important than other CSS
