--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -19,6 +19,7 @@
 @import 'core/typography';
 @import 'core/anchor';
 @import 'core/button';
+@import 'core/dropdown';
 @import 'core/blockquote';
 @import 'core/code';
 @import 'core/definition-list';
@@ -91,6 +92,10 @@
 @import 'pages/dashboard';
 @import 'pages/about';
 @import 'pages/claim';
+@import 'pages/overview';
+@import 'pages/sdprojects';
+@import 'pages/sdreviews';
+
 
 // OVERRIDING UTILITIES
 // any aditional utilities that should have more important than other CSS
