--- a/app/styles/module/_form.scss
+++ b/app/styles/module/_form.scss
@@ -204,3 +204,17 @@ Custom File Name
     color: $deepgray;
   }
 }
+
+/* Searh Company */
+.search-company {
+  .form-control {
+    background: $gray;
+  }
+}
+
+/* Super Admin tickets */
+.sd-tickets {
+  .form-control {
+    width: 100%;
+  }
+}
