--- a/app/styles/module/_review-social.scss
+++ b/app/styles/module/_review-social.scss
@@ -18,10 +18,10 @@ Reviews Content Social
 
 
     a {
-      color: $main-blue;
+      //color: $main-blue;
 
       &.btn {
-        color: $yellow;
+        //color: $yellow;
         line-height: 28px;
         @include rem(padding, 0 15px);
       }
