--- a/app/styles/pages/_claim.scss
+++ b/app/styles/pages/_claim.scss
@@ -3,3 +3,13 @@
 .claim-company {
   background: $white;
 }
+
+
+/* Claim Company Request Popup */
+.claim-company-request {
+
+
+  a > .fa-circle {
+    color: $darkgray;
+  }
+}
