fix small points

--- a/app/styles/module/_hero.scss
+++ b/app/styles/module/_hero.scss
@@ -120,6 +120,7 @@ Company Details hero
   right: 0;
   bottom: 0;
   background:  url(../images/hero/hero-shadow.png) no-repeat center bottom;
+  z-index: -1;
 }
 
 
