--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,6 +32,7 @@
 @import 'core/list';
 @import 'core/table';
 @import 'core/flag';
+@import 'core/thumbs';
 
 // MODULE
 // simple combinations of cores and reusable components not tied to a specific section
