build Company page Edit

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -96,6 +96,7 @@
 @import 'pages/overview';
 @import 'pages/sdprojects';
 @import 'pages/sdreviews';
+@import 'pages/company-edit';
 
 
 // OVERRIDING UTILITIES
