add active for main-menu and sub-menu

--- a/app/styles/module/_dashboard-nav.scss
+++ b/app/styles/module/_dashboard-nav.scss
@@ -17,6 +17,10 @@ DashBoard Main nav
   a {
     text-transform: uppercase;
     color: $main-blue;
+    &.active{
+      text-decoration: none;
+      font-weight: 700;
+    }
   }
 
   .navbar-toggler{
