new small updates

--- a/app/styles/module/_dashboard-company-block.scss
+++ b/app/styles/module/_dashboard-company-block.scss
@@ -20,8 +20,8 @@ Dashboard Company Block
   @include transition(all .4s ease);
 
   &:hover{
-    background: $main-blue;
-    color: $white;
+    //background: $main-blue;
+    //color: $white;
   }
 }
 
