--- a/app/styles/core/_thumbs.scss
+++ b/app/styles/core/_thumbs.scss
@@ -19,3 +19,53 @@
     text-decoration: none;
   }
 }
+
+
+.edit-thumb-upload {
+  position: relative;
+  @extend .edit-thumb;
+  cursor: pointer;
+
+  .edit-thumb-icon {
+    @extend .edit-thumb;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 10;
+    opacity: 0;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+    z-index: 2;
+  }
+
+  input {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 10;
+    cursor: pointer;
+  }
+  &:hover{
+    .edit-thumb-icon {
+      opacity: 1;
+    }
+  }
+}
