--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -13,3 +13,19 @@
     color: $white;
   }
 }
+
+
+// animation rest @ start
+.home .hero h1,
+.home .hero p,
+.home .btn-hero,
+.home .featured-companies h3,
+.home .featured-projects h3,
+.home .sidebar-01,
+.home .sidebar-02,
+.home .footer,
+.home .company-box,
+.home .project-box,
+.home .create-intro {
+  transform: scale(0,0);
+}
