add reply media style

--- a/app/styles/module/_company-box.scss
+++ b/app/styles/module/_company-box.scss
@@ -33,3 +33,14 @@
     color: $main-blue;
   }
 }
+
+
+/* Media */
+.underline {
+  padding-bottom: 5px;
+  border-bottom: 1px solid $gray;
+}
+
+.push-left {
+  margin-left: 100px;
+}
