add call center pages and notify icon

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -14,6 +14,8 @@ $offgray: #d6d5d5;
 $offwhite: #f3f3f3;
 $deepgray:  #464a4e;
 $placeholder: #868e96;
+$green : #84D408;
+$greennew: #C4E591;
 
 
 /*
