--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -97,6 +97,7 @@
 @import 'pages/sdprojects';
 @import 'pages/sdreviews';
 @import 'pages/company-edit';
+@import 'pages/callcenter';
 
 
 // OVERRIDING UTILITIES
