--- a/app/styles/module/_alert.scss
+++ b/app/styles/module/_alert.scss
@@ -48,5 +48,26 @@ Alert Boxes
       margin-bottom: 0;
     }
   }
+}
 
+.alert-green {
+  margin: 1rem 0;
+  background: $greennew;
+  border: 1px solid $gray;
+
+  h3 {
+    padding: .6rem 0;
+    line-height: 1;
+    vertical-align: middle;
+    color: $darkblue;
+    text-transform: inherit;
+    font-weight: 900;
+    font-size: 18px;
+    i {
+      float: left;
+      display: block;
+      color: $white;
+      margin-top: -11px;
+    }
+  }
 }
