--- a/app/styles/module/_form.scss
+++ b/app/styles/module/_form.scss
@@ -224,3 +224,47 @@ Custom File Name
     width: 100%;
   }
 }
+
+
+/* call center forms */
+.call-form {
+  .custom-control {
+    padding-left: 0;
+
+    &.single-label {
+      font-weight: 300;
+      font-size: 12px;
+      @include rem(padding-bottom, 10px);
+      @include rem(padding-top,3px);
+    }
+  }
+}
+
+/* Verify Block */
+.form-group-verify {
+  @extend .clearfix;
+  @include rem(margin, 15px 0);
+  @include rem(padding,10px 15px);
+  width: 100%;
+  background: $darkgray;
+  .verify {
+    color: $main-blue;
+    font-size: 12px;
+    @include rem(padding-top,5px);
+  }
+
+  .input-group {
+    position: relative;
+
+    i {
+      position: absolute;
+      right: 10px;
+      top: 8px;
+      z-index: 100;
+      color: $green;
+    }
+  }
+  input {
+    width: 100%;
+  }
+}
