--- a/app/styles/module/_mainnav.scss
+++ b/app/styles/module/_mainnav.scss
@@ -952,3 +952,43 @@ JavaScript Disabled
       pointer-events: none;
   }
 }
+
+
+// badge icon
+.badge-top {
+  margin: 2px 5px 0 0 ;
+  .fa-stack[data-count]:after{
+    position:absolute;
+    left:50%;
+    top:1%;
+    content: attr(data-count);
+    font-size: 10px;
+    padding:.5em .6em;
+    border-radius:999px;
+    line-height:.75em;
+    color: white;
+    background:rgba(255,0,0,.85);
+    text-align:center;
+    font-weight: bold;
+  }
+}
+
+.center-things {
+  height: 100%;
+  top: 50%;
+  position: relative;
+  p {
+    margin: 0;
+    background: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    color: gray;
+  }
+  .fa-stack-1x {
+    font-size: 25px;
+    color: $main-blue;
+  }
+}
