--- a/app/styles/module/_hero.scss
+++ b/app/styles/module/_hero.scss
@@ -7,10 +7,20 @@ Home Page Hero
 */
 
 .hero {
-  @include rem(padding, 100px 0);
   min-height: 360px;
-  background: #fff400 url(../images/hero/hero-bg.jpg) no-repeat center bottom;
-  background-size: contain;
+  background: url(../images/hero/hero-bg.jpg) no-repeat center top;
+  background-size: cover;
+  background-attachment: fixed;
+
+
+
+  .hero-bg {
+    width: 100%;
+    background: rgba(255,244,0,.6);
+    min-height: 360px;
+    @include rem(padding, 100px 0);
+
+  }
 
   &.about-hero {
     min-height: 240px;
