--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -32,6 +32,10 @@ Fonts
 $fontrobo : 'Roboto', sans-serif!default;
 $fontnu: 'Nunito', sans-serif!default;
 
+$fontSch : 'Scheherazade', serif!default;
+$fontTaj : 'Tajawal', sans-serif!default;
+
+
 $base-font-size: 14px;
 $h1-font-size: 36px;
 $h2-font-size:18px;
