--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -106,6 +106,7 @@
 @import 'utility/flush-first';
 @import 'utility/helper-classes';
 @import 'utility/visible';
+@import 'utility/lang';
 
 
 // EXTRAS
