--- a/app/styles/utility/_fonts.scss
+++ b/app/styles/utility/_fonts.scss
@@ -6,6 +6,12 @@
  @import url('https://fonts.googleapis.com/css?family=Nunito:700,800,900');
 //font-family: 'Nunito', sans-serif;
 
+// Arabic Fonts
+@import url('https://fonts.googleapis.com/css?family=Scheherazade|Tajawal&subset=arabic');
+//font-family: 'Scheherazade', serif;
+//font-family: 'Tajawal', sans-serif;
+
+
 h1,h2,h3,h4,h5,h6 {
   margin: 0;
 }
