--- a/app/styles/layout/_loggedin-site-header.scss
+++ b/app/styles/layout/_loggedin-site-header.scss
@@ -4,13 +4,18 @@ Logged In Header
 
 .cd-main-nav {
   .usernav {
-    @include rem(padding-top, 7px);
+    @include rem(padding, 0);
+    @include mq(lg2) {
+      @include rem(padding-top, 7px);
+    }
     img {
       border-radius: 50%;
       border: 1px solid $yellow;
-      @include rem(margin-bottom, 7px);
+      @include rem(margin-top, 5px);
+      @include rem(margin-bottom, 5px);
 
       @include mq(md) {
+        margin-top: 0;
         margin-bottom: 0;
       }
     }
